runtime/periodic-camera/mission.log
  File "/home/mossy/COR-SAT/missions/periodic-camera/mission.py", line 18
    format="%(asctime)s %(levelname)s %(name)s: %(message)s",,
                                                             ^
SyntaxError: invalid syntax
  File "/home/mossy/COR-SAT/missions/periodic-camera/mission.py", line 18
    format="%(asctime)s %(levelname)s %(name)s: %(message)s",,
                                                             ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/mossy/COR-SAT/missions/periodic-camera/mission.py", line 11, in <module>
    from sat_sdk import SatClient
ModuleNotFoundError: No module named 'sat_sdk'
2026-07-16 16:44:25,183 INFO periodic-camera: Starting periodic camera mission
2026-07-16 16:44:26,533 INFO periodic-camera: Captured image ./caps/2026-07-16 16-44-25.jpg: Image saved
2026-07-16 16:44:44,116 INFO periodic-camera: Starting periodic camera mission
2026-07-16 16:44:45,048 INFO periodic-camera: Captured image ./caps/2026-07-16 16-44-44.jpg: Image saved
2026-07-16 16:45:16,028 INFO periodic-camera: Captured image ./caps/2026-07-16 16-45-15.jpg: Image saved
2026-07-16 16:45:46,995 INFO periodic-camera: Captured image ./caps/2026-07-16 16-45-46.jpg: Image saved
2026-07-16 16:46:17,986 INFO periodic-camera: Captured image ./caps/2026-07-16 16-46-17.jpg: Image saved
2026-07-16 16:46:48,940 INFO periodic-camera: Captured image ./caps/2026-07-16 16-46-47.jpg: Image saved
2026-07-16 16:47:19,897 INFO periodic-camera: Captured image ./caps/2026-07-16 16-47-18.jpg: Image saved
2026-07-16 16:47:50,833 INFO periodic-camera: Captured image ./caps/2026-07-16 16-47-49.jpg: Image saved
2026-07-16 16:48:21,832 INFO periodic-camera: Captured image ./caps/2026-07-16 16-48-20.jpg: Image saved
2026-07-16 16:48:52,822 INFO periodic-camera: Captured image ./caps/2026-07-16 16-48-51.jpg: Image saved
2026-07-16 16:49:23,806 INFO periodic-camera: Captured image ./caps/2026-07-16 16-49-22.jpg: Image saved
2026-07-16 16:49:23,806 INFO periodic-camera: Reached maximum capture count: 10
2026-07-16 16:49:23,806 INFO periodic-camera: Periodic camera mission stopped
2026-07-16 17:01:37,038 INFO periodic-camera: Starting periodic camera mission
2026-07-16 17:01:37,976 INFO periodic-camera: Captured image ./caps/2026-07-16 17-01-37.jpg: Image saved
2026-07-16 17:01:46,797 INFO periodic-camera: Shutdown requested by signal 15
2026-07-16 17:01:46,979 INFO periodic-camera: Periodic camera mission stopped
